2013-04-10 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/ajax/visual_console_builder.ajax.php: fixed the name of
	agent in a Console without metaconsole.

2013-04-10  Sergio Martin <sergio.martin@artica.es>

	* include/styles/pandora.css
	include/functions_graph.php
	include/functions_events.php
	include/functions_reporting.php
	operation/agentes/tactical.php
	images/header_help.png
	general/header.php: Adapt the screen to
	1024 resolutions reducing header and tactical
	view

	* images/tree.png: Add tree new icon

2013-04-10 Miguel de Dios <miguel.dedios@artica.es>
	
	* mobile/operation/groups.php: changed the call to get groups to
	new function.

2013-04-10  Sergio Martin <sergio.martin@artica.es>

	* D       operation/agentes/estado_ultimopaquete.php
	M       operation/agentes/ver_agente.php: Restore a bad merged
	file from last commit and delete unused file

2013-04-10  Sergio Martin <sergio.martin@artica.es>

    *
M       include/functions_html.php
D       include/styles/tip.css
M       include/styles/menu.css
M       include/styles/pandora.css
M       include/functions_visual_map_editor.php
M       include/functions_groups.php
M       include/ajax/events.php
M       include/ajax/module.php
M       include/functions_ui.php
M       include/functions.php
M       include/functions_agents.php
M       include/functions_graph.php
M       include/functions_events.php
M       include/functions_menu.php
M       include/graphs/functions_flot.php
M       include/graphs/functions_gd.php
M       include/functions_reporting.php
M       include/javascript/openlayers.pandora.js
M       include/javascript/jquery.pandora.js
M       include/functions_config.php
M       include/functions_snmp_browser.php
M       include/constants.php
M       index.php
M       extensions/agents_alerts.php
D       extensions/module_groups/brick.png
M       extensions/net_tools.php
M       extensions/agents_modules.php
M       extensions/ssh_gateway.php